src/objects/Account_variation_information__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>account_id__c</fullName>
        <label>account_id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account variation information</relationshipLabel>
        <relationshipName>Account_variation_information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>indicator_avg_vary_year_amount__c</fullName>
        <label>indicator_avg_vary_year_amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>indicator_name__c</fullName>
        <label>indicator_name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>indicator_update_date__c</fullName>
        <label>indicator_update_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>indicator_vary_yoy_amount__c</fullName>
        <label>indicator_vary_yoy_amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
        <label>unique_id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>validation_color_type__c</fullName>
        <label>validation_color_type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Account variation information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>indicator_name__c</columns>
        <columns>validation_color_type__c</columns>
        <columns>indicator_avg_vary_year_amount__c</columns>
        <columns>indicator_vary_yoy_amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>Account variation information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account variation information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>